refactor: update setup

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,7 @@ exclude =
 [tool:isort]
 force_grid_wrap = 0
 include_trailing_comma = True
-known_third_party = brownie,setuptools,tokenlists
+known_third_party = ape,click,eth_utils,pytest,setuptools,tokenlists
 known_first_party = ape_tokens
 multi_line_output = 3
 use_parentheses = True
