test: update workflow to use `ape test`; add test case using mainnet

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -68,8 +68,11 @@ jobs:
         steps:
         - uses: actions/checkout@v4
 
-        - name: Setup Python
-          uses: actions/setup-python@v5
+        - name: Install Foundry
+          uses: foundry-rs/foundry-toolchain@v1
+
+        - name: Install Ape
+          uses: ApeWorX/github-action@v3
           with:
               python-version: ${{ matrix.python-version }}
 
@@ -79,7 +82,7 @@ jobs:
             pip install .[test]
 
         - name: Run Tests
-          run: pytest -m "not fuzzing" -n 0 -s --cov
+          run: ape test -m "not fuzzing" -n 0 -s --cov
 
 # NOTE: uncomment this block after you've marked tests with @pytest.mark.fuzzing
 #    fuzzing:
