--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ write_to = "ape_tokens/version.py"
 
 
 [tool.ruff]
-target-version = "py39"
+target-version = "py310"
 line-length = 100
 
 [tool.ruff.lint]
@@ -120,7 +120,9 @@ ignore = [
 convention = "google"
 
 [tool.ruff.lint.isort]
-known-first-party = ["ape", "ape_accounts", "ape_console", "ape_ethereum", "ape_geth", "ape_networks", "ape_node", "ape_plugins", "ape_pm", "ape_test", "ape_tokens"]
+known-first-party = [
+    "ape_tokens",
+]
 
 [tool.ruff.format]
 quote-style = "double"
